--- a/.travis.yml
+++ b/.travis.yml
@@ -32,7 +32,7 @@ install:
     - python setup.py install
 
 script:
-    - coverage run --source $PACKAGENAME -m py.test
+    - coverage run --source $PACKAGENAME -m pytest
     - coverage report
 
 after_success:
