--- a/.travis.yml
+++ b/.travis.yml
@@ -32,8 +32,7 @@ install:
     - python setup.py install
 
 script:
-    - coverage run --source $PACKAGENAME -m pytest
-    - coverage report
+    - py.test --cov=$PACKAGENAME
 
 after_success:
     - coveralls
