--- a/.travis.yml
+++ b/.travis.yml
@@ -32,7 +32,8 @@ install:
     - python setup.py install
 
 script:
-    - py.test --cov=$PACKAGENAME
+    - coverage run -m py.test
+    - coverage report
 
 after_success:
     - coveralls
