--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,7 @@
 language: python
+
 cache: false
+
 python:
   # We don't actually use the Travis Python, but this keeps it organized.
   - "2.7"
@@ -14,19 +16,25 @@ env:
         - PACKAGENAME="composites'
 
 before_install:
+    - sudo apt-get update
     # Here we download miniconda and install the dependencies
     - export MINICONDA=$HOME/miniconda
     - export PATH="$MINICONDA/bin:$PATH"
     - hash -r
-    - wget http://repo.continuum.io/miniconda/Miniconda-latest-Linux-x86_64.sh -O miniconda.sh
+    - if [[ "$TRAVIS_PYTHON_VERSION" == "2.7" ]]; then
+        wget https://repo.continuum.io/miniconda/Miniconda2-latest-Linux-x86_64.sh -O miniconda.sh;
+    else
+        wget https://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh -O miniconda.sh;
+    fi
     - bash miniconda.sh -b -f -p $MINICONDA
-    - conda config --set always_yes yes
-    - conda update conda
+    - export PATH="$HOME/miniconda/bin:$PATH"
+    - hash -r
+    - conda config --set always_yes yes --set changeps1 no
+    - conda update -q conda
+    # Useful for debugging any issues with conda
     - conda info -a
-    - conda create -n testenv python=$TRAVIS_PYTHON_VERSION
+    - conda create -n testenv python=$TRAVIS_PYTHON_VERSION $CONDA_DEPS
     - source activate testenv
-    - conda install $CONDA_DEPS
-
 
 install:
     - python setup.py install
