--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,7 @@
 language: python
-
 cache: false
-
 python:
   # We don't actually use the Travis Python, but this keeps it organized.
-  - "2.7"
   - "3.5"
   - "3.6"
 
@@ -16,37 +13,36 @@ env:
         - PACKAGENAME="composites'
 
 before_install:
-    - sudo apt-get update
-    # Here we download miniconda and install the dependencies
-    - export MINICONDA=$HOME/miniconda
-    - export PATH="$MINICONDA/bin:$PATH"
-    - hash -r
-    - if [[ "$TRAVIS_PYTHON_VERSION" == "2.7" ]]; then
-        wget https://repo.continuum.io/miniconda/Miniconda2-latest-Linux-x86_64.sh -O miniconda.sh;
-    else
-        wget https://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh -O miniconda.sh;
-    fi
-    - bash miniconda.sh -b -f -p $MINICONDA
-    - export PATH="$HOME/miniconda/bin:$PATH"
-    - hash -r
-    - conda config --set always_yes yes --set changeps1 no
-    - conda update -q conda
-    # Useful for debugging any issues with conda
-    - conda info -a
-    - conda create -n testenv python=$TRAVIS_PYTHON_VERSION $CONDA_DEPS
-    - source activate testenv
+  # List package dependencies for conda
+  - CONDA_DEPS="cython matplotlib pytest coverage coveralls pytest-cov numpy scipy"
+  - sudo apt-get update
+  # Here we download miniconda and install the dependencies
+  - export MINICONDA=$HOME/miniconda
+  - export PATH="$MINICONDA/bin:$PATH"
+  - hash -r
+  - wget https://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh -O miniconda.sh;
+  - bash miniconda.sh -b -f -p $MINICONDA
+  - export PATH="$HOME/miniconda/bin:$PATH"
+  - hash -r
+  - conda config --set always_yes yes --set changeps1 no
+  - conda update -q conda
+  # Useful for debugging any issues with conda
+  - conda info -a
+  - conda create -q -n testenv python=$TRAVIS_PYTHON_VERSION $CONDA_DEPS
+  - source activate testenv
 
 install:
-    - python setup.py install
+  - python setup.py install
 
 script:
-    - coverage run -m py.test
-    - coverage report
+  - coverage run --source composites -m py.test
+  - coverage report
 
 after_success:
-    - coveralls
+  - coveralls
 
 notifications:
-    email:
-        on_success: change
-        on_failure: change
+  email:
+    on_success: change
+    on_failure: change
+
