--- a/.github/workflows/pythonpublish.yml
+++ b/.github/workflows/pythonpublish.yml
@@ -4,23 +4,39 @@ on:
   release:
     types: [created]
 
-jobs:
+jobs:     
   deploy:
-    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        runs-on: [windows-latest]
+        python-version: [3.6, 3.7, 3.8, 3.9]
+    runs-on:  ${{ matrix.runs-on }}
     steps:
     - uses: actions/checkout@v1
     - name: Set up Python
       uses: actions/setup-python@v1
       with:
-        python-version: '3.x'
+        python-version: ${{ matrix.python-version }}
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
         pip install setuptools wheel twine
-    - name: Build and publish
-      env:
-        TWINE_USERNAME: ${{ secrets.PYPI_USERNAME }}
-        TWINE_PASSWORD: ${{ secrets.PYPI_PASSWORD }}
+        pip install -r requirements.txt
+    - name: Build
       run: |
         python setup.py sdist bdist_wheel
+    - name: Publish source and wheel
+      if: matrix.python-version == 3.6
+      env:
+        TWINE_USERNAME: __token__
+        TWINE_PASSWORD: ${{ secrets.PYPI_API_TOKEN }}
+      run: |
         twine upload dist/*
+    - name: Publish only wheel
+      if: matrix.python-version != 3.6
+      env:
+        TWINE_USERNAME: __token__
+        TWINE_PASSWORD: ${{ secrets.PYPI_API_TOKEN }}
+      run: |
+        twine upload dist/*.whl
+          
