--- a/.travis.yml
+++ b/.travis.yml
@@ -1,35 +1,25 @@
 language: python
 
+dist: xenial
+
 cache: false
+
+sudo: false
 
 python:
   # We don't actually use the Travis Python, but this keeps it organized.
-  - "3.5"
   - "3.6"
   - "3.7"
   - "3.8"
+  - "3.9"
 
 before_install:
-  # List package dependencies for conda
-  - CONDA_DEPS="cython matplotlib pytest coverage coveralls pytest-cov numpy scipy"
   - sudo apt-get update
-  # Here we download miniconda and install the dependencies
-  - export MINICONDA=$HOME/miniconda
-  - export PATH="$MINICONDA/bin:$PATH"
-  - hash -r
-  - wget https://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh -O miniconda.sh;
-  - bash miniconda.sh -b -f -p $MINICONDA
-  - export PATH="$HOME/miniconda/bin:$PATH"
-  - hash -r
-  - conda config --set always_yes yes --set changeps1 no
-  - conda update -q conda
-  # Useful for debugging any issues with conda
-  - conda info -a
-  - conda create -q -n testenv python=$TRAVIS_PYTHON_VERSION $CONDA_DEPS
-  - source activate testenv
+  - pip install -r requirements.txt
+  - pip install --upgrade -r requirements.txt
 
 install:
-  - python setup.py install
+  - python setup.py build_ext --inplace --force --define CYTHON_TRACE_NOGIL
 
 script:
   - coverage run -m py.test tests
