--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -5,11 +5,12 @@ on: [push]
 jobs:
   build:
 
-    runs-on: ubuntu-latest
     strategy:
       max-parallel: 4
       matrix:
+        runs-on: [ubuntu-latest, windows-latest]
         python-version: [3.6, 3.7, 3.8, 3.9]
+    runs-on: ${{ matrix.runs-on }}
 
     steps:
     - uses: actions/checkout@v1
