MAINT: added Codecov coverage

--- a/.github/workflows/pytest_and_coverage.yml
+++ b/.github/workflows/pytest_and_coverage.yml
@@ -1,4 +1,4 @@
-name: pytest
+name: pytest and coverage
 
 on: [push]
 
@@ -30,6 +30,13 @@ jobs:
         flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
         # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
-    - name: Test with pytest
+    - name: Test with pytest and coverage report
       run: |
-        pytest ./tests
+        coverage run -m py.test tests
+        coverage report
+    - name: Upload coverage to Codecov
+      uses: codecov/codecov-action@v1
+      with:
+        token: ${{ secrets.CODECOV_UPLOAD_TOKEN }} 
+        fail_ci_if_error: true
+        verbose: true
