--- a/.github/workflows/pytest_and_coverage.yml
+++ b/.github/workflows/pytest_and_coverage.yml
@@ -22,7 +22,10 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
-        python setup.py install
+        pip install --upgrade -r requirements.txt
+    - name: Install module
+      run: |
+        python setup.py build_ext --inplace --force --define CYTHON_TRACE_NOGIL
     - name: Lint with flake8
       run: |
         pip install flake8
