ENH: improving auto-release description

--- a/.github/workflows/auto_release.yml
+++ b/.github/workflows/auto_release.yml
@@ -11,12 +11,13 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
-      - name: Release
-        uses: softprops/action-gh-release@v1
+      - name: Generate changelog text
         run: |
           PENULTIMATE_TAG=`git tag --sort=committerdate | tail --lines=-2 |  head --lines=1`
           LAST_TAG=`git tag --sort=committerdate | tail --lines=-1`
           BODY_TEXT=`git shortlog ${{ PENULTIMATE_TAG }}...${{ LAST_TAG }}`
+      - name: Release
+        uses: softprops/action-gh-release@v1
         with:
           body: ${{ BODY_TEXT }}
         env:
