--- a/.github/workflows/auto_release.yml
+++ b/.github/workflows/auto_release.yml
@@ -11,15 +11,17 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
-      - name: Generate changelog text
+      - name: Generate changelog
         run: |
           PENULTIMATE_TAG=`git tag --sort=committerdate | tail --lines=-2 |  head --lines=1`
           LAST_TAG=`git tag --sort=committerdate | tail --lines=-1`
-          BODY_TEXT=`git shortlog ${{ PENULTIMATE_TAG }}...${{ LAST_TAG }}`
+          BODY_TEXT=`git shortlog ${PENULTIMATE_TAG}...${LAST_TAG}`
+          echo "::set-output name=BODY_TEXT::$BODY_TEXT"
+        id: generate-changelog
       - name: Release
         uses: softprops/action-gh-release@v1
         with:
-          body: ${{ BODY_TEXT }}
+          body: ${{ steps.generate-changelog.outputs.BODY_TEXT }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
