--- a/.github/workflows/auto_release.yml
+++ b/.github/workflows/auto_release.yml
@@ -15,12 +15,11 @@ jobs:
         run: |
           PENULTIMATE_TAG=`git tag --sort=committerdate | tail --lines=-2 |  head --lines=1`
           LAST_TAG=`git tag --sort=committerdate | tail --lines=-1`
-          BODY_TEXT=`git shortlog ${PENULTIMATE_TAG}...${LAST_TAG}`
-          echo "body_text=${BODY_TEXT}" >> $GITHUB_ENV
+          echo `git shortlog ${PENULTIMATE_TAG}...${LAST_TAG}` > ${{ github.workflow }}-BODY.txt
       - name: Release
         uses: softprops/action-gh-release@v1
         with:
-          body: ${{ env.body_text }}
+          body_path: ${{ github.workflow }}-BODY.txt
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
