--- a/.github/workflows/pythonpublish.yml
+++ b/.github/workflows/pythonpublish.yml
@@ -36,13 +36,13 @@ jobs:
       run: |
         python3 -m twine upload dist/*.whl
     - name: Build manylinux Python wheels
-      if: matrix.runs-on == 'ubuntu-latest' && matrix.python-version == 3.9
-      uses: RalfG/python-wheels-manylinux-build@v0.3.3-manylinux2010_x86_64
+      if: matrix.runs-on == 'ubuntu-latest' && matrix.python-version == '3.10'
+      uses: RalfG/python-wheels-manylinux-build@v0.4.2-manylinux2014_x86_64
       with:
-        python-versions: 'cp36-cp36m cp37-cp37m cp38-cp38 cp39-cp39'
+        python-versions: 'cp37-cp37m cp38-cp38 cp39-cp39 cp310-cp310'
         build-requirements: 'pip cython numpy setuptools wheel twine'
     - name: Publish manylinux Python wheels
-      if: matrix.runs-on == 'ubuntu-latest' && matrix.python-version == 3.9
+      if: matrix.runs-on == 'ubuntu-latest' && matrix.python-version == '3.10'
       env:
         TWINE_USERNAME: __token__
         TWINE_PASSWORD: ${{ secrets.PYPI_API_TOKEN }}
