--- a/.github/workflows/auto_doc.yml
+++ b/.github/workflows/auto_doc.yml
@@ -26,8 +26,8 @@ jobs:
       run: |
         cd doc
         make html
-    - name: Deplying documentation
-      uses: JamesIves/github-pages-deploy-action@4.3.3
+    - name: Deploying documentation
+      uses: JamesIves/github-pages-deploy-action@v4.3.3
       with:
         branch: gh-pages # The branch the action should deploy to.
         folder: ./doc/build/html # The folder the action should deploy.
