DST: MAC-OS wheels and source

--- a/.github/workflows/pythonpublish.yml
+++ b/.github/workflows/pythonpublish.yml
@@ -19,22 +19,31 @@ jobs:
       with:
         python-version: ${{ matrix.python-version }}
     - name: Install dependencies
-      if: matrix.runs-on == 'windows-latest' || (matrix.runs-on == 'ubuntu-latest' && matrix.python-version == 3.9)
+      if: matrix.runs-on == 'windows-latest' || (matrix.runs-on == 'ubuntu-latest' && matrix.python-version == '3.10') || (matrix.runs-on == 'macos-latest')
       run: |
         python3 -m pip install --upgrade pip
         python3 -m pip install --upgrade setuptools wheel twine
         pip3 install -r requirements.txt
-    - name: Build Windows Python wheels
-      if: matrix.runs-on == 'windows-latest'
+    - name: Build Windows or MAC-OS Python wheels
+      if: matrix.runs-on == 'windows-latest' || matrix.runs-on == 'macos-latest'
       run: |
-        python3 setup.py sdist bdist_wheel
-    - name: Publish Windows Python wheels
-      if: matrix.runs-on == 'windows-latest'
+        python3 setup.py sdist --formats=gztar,zip
+        python3 setup.py bdist_wheel
+    - name: Publish Windows or MAC-OS Python wheels and source
+      if: matrix.runs-on == 'windows-latest' || matrix.runs-on == 'macos-latest'
       env:
         TWINE_USERNAME: __token__
         TWINE_PASSWORD: ${{ secrets.PYPI_API_TOKEN }}
       run: |
         python3 -m twine upload dist/*.whl
+    - name: Publish source
+      if: matrix.runs-on == 'windows-latest' && matrix.python-version == '3.10'
+      env:
+        TWINE_USERNAME: __token__
+        TWINE_PASSWORD: ${{ secrets.PYPI_API_TOKEN }}
+      run: |
+        python3 -m twine upload dist/*.tar.gz
+        python3 -m twine upload dist/*.zip
     - name: Build manylinux Python wheels
       if: matrix.runs-on == 'ubuntu-latest' && matrix.python-version == '3.10'
       uses: RalfG/python-wheels-manylinux-build@v0.4.2-manylinux2014_x86_64
