--- a/.github/workflows/pytest_and_coverage.yml
+++ b/.github/workflows/pytest_and_coverage.yml
@@ -6,10 +6,9 @@ jobs:
   build:
 
     strategy:
-      max-parallel: 4
       matrix:
         runs-on: [ubuntu-latest, macos-latest, windows-latest]
-        python-version: [3.7, 3.8, 3.9, '3.10']
+        python-version: [3.7, 3.8, 3.9, '3.10', '3.11']
     runs-on: ${{ matrix.runs-on }}
 
     steps:
