--- a/.github/workflows/pytest_and_coverage.yml
+++ b/.github/workflows/pytest_and_coverage.yml
@@ -10,6 +10,8 @@ jobs:
         runs-on: [ubuntu-latest, macos-latest, windows-latest]
         python-version: [3.7, 3.8, 3.9, '3.10', '3.11']
     runs-on: ${{ matrix.runs-on }}
+    env:
+        USE_COVERAGE: ${{ matrix.runs-on == 'ubuntu-latest' && matrix.python-version == '3.11' }}
 
     steps:
     - uses: actions/checkout@v3
@@ -19,12 +21,17 @@ jobs:
         python-version: ${{ matrix.python-version }}
     - name: Install dependencies
       run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
-        pip install --upgrade -r requirements.txt
-    - name: Install module
+        python3 -m pip install --upgrade pip
+        python3 -m pip install -r requirements.txt
+        python3 -m pip install --upgrade -r requirements.txt
+    - name: Install module for coverage
+      if: env.USE_COVERAGE == 'true'
       run: |
-        python setup.py build_ext --inplace --force --define CYTHON_TRACE_NOGIL
+        python3 setup.py build_ext --inplace --force --define CYTHON_TRACE_NOGIL
+    - name: Install module
+      if: env.USE_COVERAGE == 'false'
+      run: |
+        python3 setup.py install
     - name: Lint with flake8
       run: |
         pip install flake8
@@ -33,9 +40,14 @@ jobs:
         # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
     - name: Test with pytest and coverage report
+      if: env.USE_COVERAGE == 'true'
       run: |
         coverage run -m pytest tests
         coverage report
+    - name: Test with pytest
+      if: env.USE_COVERAGE == 'false'
+      run: |
+        pytest tests
     - name: Upload coverage to Codecov
       uses: codecov/codecov-action@v2
       with:
