--- a/.github/workflows/auto_doc.yml
+++ b/.github/workflows/auto_doc.yml
@@ -14,14 +14,14 @@ jobs:
     - name: Set up Python
       uses: actions/setup-python@v3
       with:
-        python-version: '3.10'
+        python-version: '3.11'
     - name: Install dependencies
       run: |
-        python -m pip install --upgrade pip
-        pip install --upgrade -r requirements_doc.txt
+        python3 -m pip install --upgrade pip
+        python3 -m pip install --upgrade -r requirements_doc.txt
     - name: Install module
       run: |
-        python setup.py install
+        python3 -m pip install . 
     - name: Building documentation
       run: |
         cd doc
