BLD: building with pip install

--- a/.github/workflows/pytest_and_coverage.yml
+++ b/.github/workflows/pytest_and_coverage.yml
@@ -22,8 +22,8 @@ jobs:
     - name: Install dependencies
       run: |
         python3 -m pip install --upgrade pip
-        python3 -m pip install -r requirements.txt
-        python3 -m pip install --upgrade -r requirements.txt
+        python3 -m pip install -r ci_requirements.txt
+        python3 -m pip install --upgrade -r ci_requirements.txt
     - name: Install module for coverage
       if: env.USE_COVERAGE == 'true'
       run: |
