--- a/.github/workflows/auto_doc.yml
+++ b/.github/workflows/auto_doc.yml
@@ -18,7 +18,7 @@ jobs:
     - name: Install dependencies
       run: |
         python3 -m pip install --upgrade pip
-        python3 -m pip install --upgrade -r requirements_doc.txt
+        python3 -m pip install --upgrade -r ci_requirements_doc.txt
     - name: Install module
       run: |
         python3 -m pip install . 
