--- a/.github/workflows/pythonpublish.yml
+++ b/.github/workflows/pythonpublish.yml
@@ -19,7 +19,7 @@ jobs:
       with:
         python-version: ${{ matrix.python-version }}
     - name: Install dependencies
-      if: matrix.runs-on == 'windows-latest' || (matrix.runs-on == 'ubuntu-latest' && matrix.python-version == '3.10') || (matrix.runs-on == 'macos-latest')
+      if: matrix.runs-on == 'windows-latest' || (matrix.runs-on == 'ubuntu-latest' && matrix.python-version == '3.11') || (matrix.runs-on == 'macos-latest')
       run: |
         python3 -m pip install --upgrade pip
         python3 -m pip install --upgrade setuptools wheel twine
@@ -37,20 +37,20 @@ jobs:
       run: |
         python3 -m twine upload dist/*.whl
     - name: Publish source
-      if: matrix.runs-on == 'windows-latest' && matrix.python-version == '3.10'
+      if: matrix.runs-on == 'windows-latest' && matrix.python-version == '3.11'
       env:
         TWINE_USERNAME: __token__
         TWINE_PASSWORD: ${{ secrets.PYPI_API_TOKEN }}
       run: |
         python3 -m twine upload dist/*.tar.gz
     - name: Build manylinux Python wheels
-      if: matrix.runs-on == 'ubuntu-latest' && matrix.python-version == '3.10'
-      uses: RalfG/python-wheels-manylinux-build@v0.4.2-manylinux2014_x86_64
+      if: matrix.runs-on == 'ubuntu-latest' && matrix.python-version == '3.11'
+      uses: RalfG/python-wheels-manylinux-build@v0.6.0-manylinux2010_x86_64
       with:
-        python-versions: 'cp37-cp37m cp38-cp38 cp39-cp39 cp310-cp310'
+        python-versions: 'cp37-cp37m cp38-cp38 cp39-cp39 cp310-cp310 cp311-cp311'
         build-requirements: 'pip cython numpy setuptools wheel twine'
     - name: Publish manylinux Python wheels
-      if: matrix.runs-on == 'ubuntu-latest' && matrix.python-version == '3.10'
+      if: matrix.runs-on == 'ubuntu-latest' && matrix.python-version == '3.11'
       env:
         TWINE_USERNAME: __token__
         TWINE_PASSWORD: ${{ secrets.PYPI_API_TOKEN }}
