--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,2 +1,2 @@
 [build-system]
-requires = ["setuptools", "wheel", "numpy >= 1.23.0", "cython"]
+requires = ["setuptools", "wheel", "numpy", "cython"]
