--- a/.github/workflows/pythonpublish.yml
+++ b/.github/workflows/pythonpublish.yml
@@ -46,7 +46,7 @@ jobs:
         python3 -m twine upload dist/*.tar.gz
     - name: Build manylinux Python wheels
       if: matrix.runs-on == 'ubuntu-latest' && matrix.python-version == '3.10'
-      uses: RalfG/python-wheels-manylinux-build@v0.6.0-manylinux2014_x86_64
+      uses: RalfG/python-wheels-manylinux-build@v0.6.0-manylinux_2_28_x86_64
       with:
         python-versions: 'cp38-cp38 cp39-cp39 cp310-cp310 cp311-cp311'
         build-requirements: 'pip cython numpy setuptools wheel twine'
