--- a/.github/workflows/pythonpublish.yml
+++ b/.github/workflows/pythonpublish.yml
@@ -44,13 +44,11 @@ jobs:
       run: |
         python3 -m twine upload dist/*.whl
     - name: Build Linux Python wheels, install cibuildwheel
-      if: matrix.runs-on == 'ubuntu-latest'
+      if: matrix.runs-on == 'ubuntu-latest' && matrix.python-version == '3.12'
       run: |
         python -m pip install cibuildwheel==2.16.5
     - name: Build Linux Python wheels
-      if: matrix.runs-on == 'ubuntu-latest'
-      env:
-        CIBW_BUILD: ('cp%s-*' % matrix.python-version.replace('.', ''))
+      if: matrix.runs-on == 'ubuntu-latest' && matrix.python-version == '3.12'
       run: |
         python -m cibuildwheel --output-dir dist
     - name: Publish Linux Python wheels
