--- a/.github/workflows/auto_release.yml
+++ b/.github/workflows/auto_release.yml
@@ -13,3 +13,5 @@ jobs:
         uses: actions/checkout@v5
       - name: Release
         uses: softprops/action-gh-release@v2
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
